src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>cas__Most_Recent_Disposition__c</fullName>
        <label>Most Recent Disposition</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Conversation</fullName>
                </value>
                <value>
                    <fullName>DoNotCall – 24 Hour Pause</fullName>
                </value>
                <value>
                    <fullName>No Answer</fullName>
                </value>
                <value>
                    <fullName>Problem - Blocked by Gatekeeper</fullName>
                </value>
                <value>
                    <fullName>Problem – Fax Tone</fullName>
                </value>
                <value>
                    <fullName>Problem – Incomplete Record</fullName>
                </value>
                <value>
                    <fullName>Problem – Target Inaccurate</fullName>
                </value>
                <value>
                    <fullName>Problem – Target In Different Location</fullName>
                </value>
                <value>
                    <fullName>Problem - Target Left Organization</fullName>
                </value>
                <value>
                    <fullName>Problem – Wrong Company</fullName>
                </value>
                <value>
                    <fullName>Target Not Available</fullName>
                </value>
                <value>
                    <fullName>User Not Available</fullName>
                </value>
                <value>
                    <fullName>Voicemail Dropped</fullName>
                </value>
                <value>
                    <fullName>Voicemail Reached</fullName>
                </value>
                <value>
                    <fullName>Voicemail Reached – Direct Number</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cas__NumberAttempts__c</fullName>
        <label>Number of Attempts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cas__NumberConnects__c</fullName>
        <label>Number Of Conversations</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cas__Penalty_Box_Status__c</fullName>
        <defaultValue>false</defaultValue>
        <description>CAS Penalty Box Status</description>
        <label>Penalty Box Status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nde__Company_Domain__c</fullName>
        <description>Node provided company domain name</description>
        <label>Company Domain</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nde__Node_Available_Matches__c</fullName>
        <label>Node Available Matches</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Node City Vertical Matches</fullName>
                </value>
                <value>
                    <fullName>Node City Matches</fullName>
                </value>
                <value>
                    <fullName>Node Vertical Matches</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>nde__Node_Best_Matches_Context__c</fullName>
        <label>Node Best Matches Context</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nde__Node_Best_Matches__c</fullName>
        <label>Node Best Matches</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nde__Node_City_and_Category_Matches__c</fullName>
        <label>Node City and Category Matches</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nde__Node_City_and_Subcategory_Matches__c</fullName>
        <label>Node City and Subcategory Matches</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nde__Node_Context_Formula__c</fullName>
        <description>Node-generated context with relevant information about a contact.</description>
        <formula>BLANKVALUE(nde__Node_Context__c, &quot;Working on it...&quot;)</formula>
        <label>Node Context</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nde__Node_Context__c</fullName>
        <defaultValue>&quot;Working on it...&quot;</defaultValue>
        <description>Node-generated context with relevant information about a contact.</description>
        <label>Node Context Raw</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nde__Node_Corporate_Parent__c</fullName>
        <label>Node Corporate Parent</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nde__Node_Corporate_Subsidiaries__c</fullName>
        <label>Node Corporate Subsidiaries</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>nde__Node_Data_Version__c</fullName>
        <label>Node Data Version</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>nde__Node_Education__c</fullName>
        <label>Node Education</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nde__Node_Education_in_Common__c</fullName>
        <label>Node Education in Common</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nde__Node_Former_Customer_Contact__c</fullName>
        <label>Node Former Customer Contact</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nde__Node_Generated_Formula__c</fullName>
        <description>Was this contact generated or analyzed by Node.io?</description>
        <formula>IF( nde__Node_Generated__c, IMAGE(&quot;https://ded8kzigizww9.cloudfront.net/node-generated-caps-2x-02.png&quot;, &quot;Node Generated&quot;, 12, 110),
IMAGE(&quot;https://ded8kzigizww9.cloudfront.net/node-analyzed-caps-2x-02.png&quot;, &quot;Node Analyzed&quot;, 12, 99))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Node Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nde__Node_Generated__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Was this lead generated by Node.io?</inlineHelpText>
        <label>Node Generated?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nde__Node_Global_Parent_Lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Node Global Parent Lookup</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Subsidiary_Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>nde__Node_Global_Parent__c</fullName>
        <label>Node Global Parent</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nde__Node_HQ_City__c</fullName>
        <label>Node HQ City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nde__Node_HQ_Country__c</fullName>
        <label>Node HQ Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nde__Node_HQ_State__c</fullName>
        <label>Node HQ State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nde__Node_HQ_Street__c</fullName>
        <label>Node HQ Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nde__Node_HQ_Zip__c</fullName>
        <label>Node HQ Zip</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nde__Node_Internal__c</fullName>
        <description>This information is used by Node Sales Analyst</description>
        <label>Node Internal</label>
        <length>15000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>nde__Node_Keywords__c</fullName>
        <description>Keywords associated with the company</description>
        <label>Node Keywords</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>nde__Node_Last_Modified_Date__c</fullName>
        <label>Node Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>nde__Node_NAICS_Code__c</fullName>
        <description>Company NAICS code</description>
        <label>Node NAICS Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nde__Node_NAICS_Description__c</fullName>
        <description>Company NAICS code brief description</description>
        <label>Node NAICS Description</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nde__Node_Primary_Company_Name__c</fullName>
        <label>Node Primary Company Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nde__Node_Primary_Domain__c</fullName>
        <label>Node Primary Domain</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nde__Node_Priority_Formula__c</fullName>
        <formula>CASE(nde__Node_Priority__c, 
-1, &quot;N/A&quot;, 
0, &quot;U&quot;,
1, &quot;C&quot;, 
2, &quot;B&quot;, 
3, &quot;A&quot;, 
4, &quot;Closed&quot;,
10, &quot;D&quot;,
20, &quot;C&quot;,
30, &quot;B&quot;,
40, &quot;A&quot;,
100, &quot;Closed&quot;,
&quot;U&quot;)</formula>
        <label>Node Priority</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nde__Node_Priority__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Node Grade (num)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>nde__Node_Subcategory_Matches__c</fullName>
        <label>Node Subcategory Matches</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nde__Node_Target_Profile__c</fullName>
        <label>Node Target Profile</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nde__Node_Technologies_Found__c</fullName>
        <label>Node Technologies Found</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>default</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>nde__Technologies_Used__c</fullName>
        <description>A Node-provided list of technologies used by an organization.</description>
        <label>Node Technologies Used</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>nde__You_Should_Mention__c</fullName>
        <defaultValue>&quot;Coming soon! Data will appear here once processing is complete.&quot;</defaultValue>
        <label>Node You Should Mention</label>
        <length>1500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>zisf__ZoomInfo_Email__c</fullName>
        <description>ZoomInfo Email address for the Contact record.</description>
        <inlineHelpText>ZoomInfo Email address for the Contact record.</inlineHelpText>
        <label>ZoomInfo Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>zisf__ZoomInfo_Phone__c</fullName>
        <description>ZoomInfo Phone for the Contact record.</description>
        <inlineHelpText>ZoomInfo Phone for the Contact record.</inlineHelpText>
        <label>ZoomInfo Phone</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zisf__zoom_id__c</fullName>
        <description>ZoomInfo person id, if the data on this object has ever been imported from the ZIDB.
Stored as Long on Solr.</description>
        <label>ZoomInfo ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zisf__zoom_lastupdated__c</fullName>
        <description>Last updated from ZoomInfo timestamp</description>
        <label>ZoomInfo Last Updated</label>
        <type>DateTime</type>
    </fields>
    <listViews>
        <fullName>Aria_Systems</fullName>
        <columns>FULL_NAME</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>Seniority__c</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>Onboarding_Session__c</columns>
        <columns>ICP_Completion_Date__c</columns>
        <columns>Onboarding__c</columns>
        <columns>Start_Date__c</columns>
        <columns>CONTACT.LAST_ACTIVITY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.NAME</field>
            <operation>equals</operation>
            <value>Aria Systems</value>
        </filters>
        <filters>
            <field>Start_Date__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Aria Systems Customer Success</label>
    </listViews>
    <listViews>
        <fullName>Available_to_Sequence_Anderson</fullName>
        <booleanFilter>1 AND 3 AND (2 OR 4 OR 5) AND 6</booleanFilter>
        <columns>ACCOUNT.NAME</columns>
        <columns>nde__Node_Priority_Formula__c</columns>
        <columns>FULL_NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>Actively_Being_Sequenced__c</columns>
        <columns>Account_Status__c</columns>
        <columns>Contact_Status__c</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Actively_Being_Sequenced__c</field>
            <operation>notEqual</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Contact_Status__c</field>
            <operation>equals</operation>
            <value>Marketing Qualified,Sales Ready - Not in Sequence</value>
        </filters>
        <filters>
            <field>Account_Status__c</field>
            <operation>notContain</operation>
            <value>,open opportunity,bad data,do not contact,customer</value>
        </filters>
        <filters>
            <field>Contact_Status__c</field>
            <operation>equals</operation>
            <value>Completed Sequence and Unresponsive,Manual_Finish_and_Unresponsive</value>
        </filters>
        <filters>
            <field>Contact_Status__c</field>
            <operation>equals</operation>
            <value>Added to Existing Account - Not in Sequence</value>
        </filters>
        <filters>
            <field>CORE.USERS.LAST_NAME</field>
            <operation>equals</operation>
            <value>Anderson</value>
        </filters>
        <label>Available to Sequence - Anderson</label>
    </listViews>
    <listViews>
        <fullName>GuideSpark</fullName>
        <columns>FULL_NAME</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>Seniority__c</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>Onboarding_Session__c</columns>
        <columns>ICP_Completion_Date__c</columns>
        <columns>Onboarding__c</columns>
        <columns>Start_Date__c</columns>
        <columns>CONTACT.LAST_ACTIVITY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.NAME</field>
            <operation>equals</operation>
            <value>GuideSpark</value>
        </filters>
        <filters>
            <field>Start_Date__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>GuideSpark Customer Success</label>
    </listViews>
    <listViews>
        <fullName>InsightSquared</fullName>
        <columns>FULL_NAME</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>Seniority__c</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>Onboarding_Session__c</columns>
        <columns>ICP_Completion_Date__c</columns>
        <columns>Onboarding__c</columns>
        <columns>Start_Date__c</columns>
        <columns>CONTACT.LAST_ACTIVITY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.NAME</field>
            <operation>equals</operation>
            <value>InsightSquared</value>
        </filters>
        <filters>
            <field>Start_Date__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>InsightSquared Customer Success</label>
    </listViews>
    <listViews>
        <fullName>Jitterbit</fullName>
        <columns>FULL_NAME</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>Seniority__c</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>Onboarding_Session__c</columns>
        <columns>ICP_Completion_Date__c</columns>
        <columns>Onboarding__c</columns>
        <columns>Start_Date__c</columns>
        <columns>CONTACT.LAST_ACTIVITY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.NAME</field>
            <operation>equals</operation>
            <value>Jitterbit</value>
        </filters>
        <filters>
            <field>Start_Date__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Jitterbit Customer Success</label>
    </listViews>
    <listViews>
        <fullName>nde__Node_Contacts_View</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>nde__Node_Generated_Formula__c</columns>
        <columns>nde__Node_Priority_Formula__c</columns>
        <columns>nde__Node_Context__c</columns>
        <columns>nde__Node_Context_Formula__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.NAME</field>
            <operation>contains</operation>
            <value>PagerDuty</value>
        </filters>
        <label>Node Contacts View</label>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Disqualified_Reason_for_Contact_Status</fullName>
        <active>true</active>
        <errorConditionFormula>If(ISPICKVAL(Contact_Status__c, &apos;Disqualified&apos;)&amp;&amp;  ISPICKVAL(Disqualified_Reason__c, &apos;&apos;),TRUE,FALSE)</errorConditionFormula>
        <errorDisplayField>Disqualified_Reason__c</errorDisplayField>
        <errorMessage>Disqualified Reason is required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Follow_Up_Date_for_Contact_Status</fullName>
        <active>true</active>
        <errorConditionFormula>If(ISPICKVAL( Contact_Status__c ,&apos;Timing - Future Opportunity&apos;)&amp;&amp; ISBLANK(Follow_Up_Date__c),TRUE,FALSE)</errorConditionFormula>
        <errorDisplayField>Follow_Up_Date__c</errorDisplayField>
        <errorMessage>Follow Up Date is required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Follow_Up_Date_for_Future_Date</fullName>
        <active>true</active>
        <errorConditionFormula>If(ISPICKVAL( Contact_Status__c ,&apos;Timing - Future Opportunity&apos;)&amp;&amp; Follow_Up_Date__c  &lt; TODAY()+1,TRUE,FALSE)</errorConditionFormula>
        <errorDisplayField>Follow_Up_Date__c</errorDisplayField>
        <errorMessage>Follow Up Date should be future date!</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>LID__Check_CompanyId_Value</fullName>
        <active>true</active>
        <description>Throws an exception message if the company id contains non-numerics</description>
        <errorConditionFormula>AND(
	(LID__LinkedIn_Company_Id__c &lt;&gt; NULL),
	NOT(ISNUMBER(LID__LinkedIn_Company_Id__c))
)</errorConditionFormula>
        <errorDisplayField>LID__LinkedIn_Company_Id__c</errorDisplayField>
        <errorMessage>CompanyId should be a numeric value</errorMessage>
    </validationRules>
</CustomObject>